# pi25

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: pi25.c
src/assets/: CMakeLists.txt  font.h  sample.h
src/drivers/: CMakeLists.txt  term.c  term.h
src/drivers/i2ckbd/: CMakeLists.txt  i2ckbd.c  i2ckbd.h
src/drivers/lcdspi/: CMakeLists.txt  lcdspi.c
src/drivers/pwm_sound/: CMakeLists.txt
src/drivers/rp2040-psram/: CMakeLists.txt
src/lua/: CMakeLists.txt
src/lua-bindings/: CMakeLists.txt  bindings.c  bindings.h
